--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -81,7 +81,7 @@ winget:
       owner: microsoft
       name: winget-pkgs
       branch: "{{.ProjectName}}-{{.Version}}-{{.ShortCommit}}"
-      token: "{{ .Env.WINGET_GITHUB_TOKEN }}"
+      token: "{{ .Env.GITHUB_TOKEN }}"
       pull_request:
         enabled: true
         draft: false
