--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,14 +12,18 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
+      - linux
       - windows
+      - darwin
     goarch:
       - amd64
       - arm64
 
 archives:
   - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ title .Os }}_{{ .Arch }}"
-    format: zip
+    format_overrides:
+      - goos: windows
+        formats: [zip]
 
 checksum:
   name_template: "checksums.txt"
@@ -27,10 +31,123 @@ checksum:
 snapshot:
   version_template: "{{ .Tag }}-next"
 
-# Winget configuration
+# Homebrew Tap (macOS and Linux)
+brews:
+  - # GitHub repository for your Homebrew tap
+    # You'll need to create a repo named homebrew-tap (or homebrew-<anything>)
+    name: graft
+    repository:
+      owner: skssmd  # Your GitHub username
+      name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+    
+    # Commit author for Homebrew formula updates
+    commit_author:
+      name: goreleaserbot
+      email: bot@goreleaser.com
+    
+    # Directory inside the repository where formula will be stored
+    directory: Formula
+    
+    # Homepage of your project
+    homepage: "https://github.com/skssmd/graft"
+    
+    # Description for Homebrew
+    description: "Agentless deployment tool extending Docker Compose to cloud via SSH"
+    
+    # License
+    license: "MIT"
+    
+    # Install script
+    install: |
+      bin.install "graft"
+    
+    # Test to verify installation
+    test: |
+      system "#{bin}/graft --version"
+
+# Debian/Ubuntu APT repository (using Fury.io or custom repo)
+nfpms:
+  - # Package name
+    package_name: graft
+    
+    # Your info
+    vendor: skssmd
+    homepage: https://github.com/skssmd/graft
+    maintainer: skssmd <skssmd78475@gmail.com>
+    
+    # Description
+    description: Agentless deployment tool extending Docker Compose to cloud via SSH
+    
+    # License
+    license: MIT
+    
+    # Formats to generate
+    formats:
+      - deb      # Debian/Ubuntu
+      - rpm      # RedHat/Fedora
+      - apk      # Alpine
+      - archlinux # Arch Linux
+    
+    # No dependencies - graft is a standalone binary
+    # It installs docker/docker-compose/git on target servers via SSH
+    
+    # Files to include
+    contents:
+      # Man pages (optional)
+      # - src: ./manpages/graft.1.gz
+      #   dst: /usr/share/man/man1/graft.1.gz
+      
+      # Completion scripts (optional)
+      # - src: ./completions/graft.bash
+      #   dst: /usr/share/bash-completion/completions/graft
+      
+      # Config files (optional)
+      # - src: ./config/graft.yml
+      #   dst: /etc/graft/config.yml
+      #   type: config
+
+# AUR (Arch User Repository)
+aurs:
+  - # AUR package name (GoReleaser will use graft-bin for binary packages)
+    name: graft-bin
+    
+    # Your AUR SSH key (you'll need to set this up)
+    # Generate with: ssh-keygen -t ed25519 -C "aur@archlinux.org"
+    # Add to AUR: https://aur.archlinux.org/account/
+    private_key: "{{ .Env.AUR_SSH_KEY }}"
+    
+    # Git URL for AUR repository
+    git_url: "ssh://aur@aur.archlinux.org/graft-bin.git"
+    
+    # Package description (AUR requires max 80 chars, no period at end)
+    description: "Agentless deployment tool extending Docker Compose to cloud via SSH"
+    
+    # Maintainers
+    maintainers:
+      - "skssmd <skssmd78475@gmail.com>"
+    
+    # Contributors (optional)
+    contributors:
+      - "skssmd <skssmd78475@gmail.com>"
+    
+    # License
+    license: MIT
+    
+    # Homepage
+    homepage: "https://github.com/skssmd/graft"
+    
+    # No dependencies - graft is a standalone binary
+    # It installs docker/docker-compose/git on remote servers via SSH
+    
+    # Commit author
+    commit_author:
+      name: goreleaserbot
+      email: bot@goreleaser.com
 winget:
   - name: Graft
     publisher: skssmd
+    package_identifier: skssmd.Graft 
     license: MIT
     copyright: Copyright (c) 2025 skssmd
     homepage: https://github.com/skssmd/Graft
@@ -97,19 +214,72 @@ winget:
     
     # Skip upload for testing
     skip_upload: false
+
+# Snapcraft (Snap Store)
+# snapcrafts:
+#   - # Snap name
+#     name: graft
+    
+#     # Description
+#     summary: Agentless deployment tool extending Docker Compose to cloud via SSH
+#     description: A simple agentless deployment engine that extends the Docker Compose workflow to cloud infrastructure via SSH. Graft enables native remote management of AWS, GCP, and VPS instances with no agent installs or server-side overhead required. With features like DNS Configurations, Rollbacks, CI/CD Workflow
+    
+#     # License
+#     license: MIT
+    
+#     # Type of snap (classic or strict)
+#     # Graft needs classic because it interacts with the local file system, SSH, and Git
+#     confinement: classic
+    
+#     # Build to publish
+#     publish: true
+    
+#     # Graded (devel or stable)
+#     grade: stable
+
+# Publishers for APT/RPM (using Gemfury, Cloudsmith, or custom)
+# If you want to host your own APT repository, use this:
+publishers:
+  - name: fury.io
+    # You'll need a Fury.io account token
+    env:
+      - FURY_TOKEN={{ .Env.FURY_TOKEN }}
+    cmd: |
+      curl -F package=@{{ .ArtifactPath }} https://{{ .Env.FURY_TOKEN }}@push.fury.io/skssmd/
+
 release:
+  # Set to true to create draft releases (you can publish manually after review)
   draft: false
+  # Set to true to mark as prerelease for beta/rc tags
   prerelease: auto
   
   header: |
-    winget install skssmd.Graft
-    ```
+    ## Feature Update with Graft  🚀
     
-    **Or upgrade:**
-    ```powershell
-    winget upgrade skssmd.Graft
+    ### V2.3 Highlights:
+    1. **Rollback Feature**: Added rollback functionality to revert to previous deployments.
+    2. **Webhook Mapping**: Added webhook mapping functionality to map webhook domains to servers.
+    3. **Multi Environment Support**: Added multi environment support to manage multiple deployment environments.
+                        - Environment Creation
+                        - Environment Specific Configuration
+                        - Environment Specific Workflow Generation
+                        - Environment Specific Host and Deployment
+                        - Environment Specific Commands
+                        - Environment Specific DNS Configurations
+                        - Environment Specific Rollback
+    4. **Bug Fixes and Improvements**
     
+    ### V2 Highlights:
+    This release introduces significant enhancements to Graft, moving from basic local-to-server deployments to a more robust CI/CD-driven workflow using GitHub Actions and our new `graft-hook` service.
+    
+    1. **Git Remote Modes**: Move away from direct local-to-server channels. Deployments now go through GitHub Workflows and CI/CD channels.
+    2. **Graft-Hook**: A new webhook service personalized specifically for Graft-based servers, maintaining a zero-config solution with proper security.
+    3. **Automated GitHub Workflows**: Graft now generates production-ready workflows automatically from your `graft-compose.yml` context.
+    4. **Enhanced Monitoring**: Easy CLI-based monitoring for `graft-hook`, including real-time build error logs.
+    5. **Cloudflare API Integration**: Automated DNS zone mapping based on Traefik host labels.
+    6. **Cloudflare Zone Registry**: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
+    7. **Database Backup Automation(Infrastructure)**: Easily backup Infrastructure databases to S3/R2(Experimental).
   
   footer: |
     ---
-    Released by **skssmd** using [GoReleaser](https://github.com/goreleaser/goreleaser)
+    Released by **skssmd** using [GoReleaser](https://github.com/goreleaser/goreleaser).
