--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -255,29 +255,19 @@ release:
   header: |
     ## Feature Update with Graft  🚀
     
-    ### V2.3 Highlights:
+    ### V2.4 Highlights:
+    1. **Docker Passthrough Commands**: Execute docker commands directly on remote hosts or specific registries via Graft.
+    2. **Bug Fixes and Improvements**
+    
+    ### V2 Series Highlights (v2.0 - v2.3):
     1. **Rollback Feature**: Added rollback functionality to revert to previous deployments.
-    2. **Webhook Mapping**: Added webhook mapping functionality to map webhook domains to servers.
-    3. **Multi Environment Support**: Added multi environment support to manage multiple deployment environments.
-                        - Environment Creation
-                        - Environment Specific Configuration
-                        - Environment Specific Workflow Generation
-                        - Environment Specific Host and Deployment
-                        - Environment Specific Commands
-                        - Environment Specific DNS Configurations
-                        - Environment Specific Rollback
-    4. **Bug Fixes and Improvements**
-    
-    ### V2 Highlights:
-    This release introduces significant enhancements to Graft, moving from basic local-to-server deployments to a more robust CI/CD-driven workflow using GitHub Actions and our new `graft-hook` service.
-    
-    1. **Git Remote Modes**: Move away from direct local-to-server channels. Deployments now go through GitHub Workflows and CI/CD channels.
-    2. **Graft-Hook**: A new webhook service personalized specifically for Graft-based servers, maintaining a zero-config solution with proper security.
-    3. **Automated GitHub Workflows**: Graft now generates production-ready workflows automatically from your `graft-compose.yml` context.
-    4. **Enhanced Monitoring**: Easy CLI-based monitoring for `graft-hook`, including real-time build error logs.
-    5. **Cloudflare API Integration**: Automated DNS zone mapping based on Traefik host labels.
-    6. **Cloudflare Zone Registry**: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
-    7. **Database Backup Automation(Infrastructure)**: Easily backup Infrastructure databases to S3/R2(Experimental).
+    2. **Multi Environment Support**: Comprehensive management for multiple deployment environments including specific configurations, workflows, and DNS.
+    3. **Webhook Mapping**: Map webhook domains to servers using Graft.
+    4. **Git Remote Modes**: Deployments now go through GitHub Workflows and CI/CD channels.
+    5. **Graft-Hook**: A new webhook service for Graft-based servers.
+    6. **Automated GitHub Workflows**: Generate workflows automatically from `graft-compose.yml`.
+    7. **Cloudflare Integration**: Automated DNS zone mapping and zone management.
+    8. **Database Backup Automation**: Infrastructure database backups to S3/R2 (Experimental).
   
   footer: |
     ---
